--- a/assets/css/estrutura.css
+++ b/assets/css/estrutura.css
@@ -217,22 +217,70 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* :Página Home */
 
 /* Expertises: */
-	.Expertises h1 { position: initial; margin-top: 267px; margin-bottom: 80px; }
+	.Expertises h1 { position: initial; margin-top: 18%; margin-bottom: 80px; padding: 0 150px }
 	.Expertises p { text-align: center; }
 	.Expertises .PrimeiraSessao::after { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; bottom: 0 }
 	
-	.Expertises .PrimeiraSessao article { height: 100%; }
-	.Expertises .PrimeiraSessao p { font-size: 1.3rem; line-height: 1.75rem; padding: 0 75px; }
+	.Expertises .PrimeiraSessao div { height: 100%; padding: 50px; box-sizing: border-box; }
+	.Expertises .PrimeiraSessao p { font-size: 1.3rem; line-height: 1.75rem; padding: 0 115px; }
 	.Expertises .PrimeiraSessao p:first-of-type { font-size: 1.5rem; margin-bottom: 20px; font-family: 'OC Rey' }
-	.Expertises .PrimeiraSessao img { width: 16px; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg); margin: auto; margin-top: 75px; }
+	.Expertises .PrimeiraSessao img { width: 16px; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg); bottom: 82px; left: 50%; margin-left: -8px; position: absolute; }
 
-	.Expertises .SegundaSessao { background-color: var(--secundaria); }
-	.Expertises .SegundaSessao h2 { font-size: 2.8rem; text-align: center; margin-top: 80px; margin-bottom: 25px; }
-	.Expertises .SegundaSessao p:first-of-type { font-size: 1.5rem; } 
-	.Expertises .SegundaSessao span { content: ''; width: 1px; height: 68px; background: #FFF; left: 50%; margin-left: -0.5px; margin: 70px auto; display: block; }
+	.Expertises .SegundaSessao { background-color: var(--secundaria); padding-top: 80px; padding-bottom: 90px; }
+	.Expertises .SegundaSessao h2 { font-size: 2.8rem; text-align: center; margin-bottom: 25px; }
+	.Expertises .SegundaSessao p:first-of-type { font-size: 1.5rem; font-family: 'OC Rey'; } 
+	.Expertises .SegundaSessao .Risco { content: ''; width: 1px; height: 68px; background: #FFF; left: 50%; margin-left: -0.5px; margin: 70px auto; display: block; }
 
-	.Expertises .SegundaSessao .Slider {  }
+	.Expertises .SegundaSessao .SliderWrapper { color: var(--principal); font-family: 'OC Rey'; max-width: initial; }
+	.Expertises .SegundaSessao .SliderWrapper p:first-of-type { text-transform: uppercase; font-size: 1.25rem; letter-spacing: 0.4rem; margin-bottom: 90px; }
 
+	.Expertises .SegundaSessao .Slider { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; text-align: center; }
+	.Expertises .SegundaSessao .Slider div { }
+	.Expertises .SegundaSessao .Slider div div:first-of-type { font-size: 1.8rem; }
+	.Expertises .SegundaSessao .Slider div div:nth-of-type(2) { margin-top: 50px; margin-bottom: 40px; position: relative; }
+
+	.Expertises .SegundaSessao .Bola { content: ''; width: 6px; height: 6px; background-color: var(--principal); display: block; border-radius: 50%; margin: auto; }
+	.Expertises .SegundaSessao .Bola::before { content: ''; width: calc(50% - 6px); height: 2px; background-color: var(--principal); display: block; position: absolute; left: 0; top: 2px; opacity: 0.29 }
+	.Expertises .SegundaSessao .Bola::after { content: ''; width: calc(50% - 6px); height: 2px; background-color: var(--principal); display: block; position: absolute; right: 0; top: 2px; opacity: 0.29 }
+		
+	.Expertises .SegundaSessao .wrapper:first-child .Bola:before { display: none; }
+	.Expertises .SegundaSessao .wrapper:last-child .Bola:after { display: none; }
+
+	.Expertises .SegundaSessao .Slider div div:nth-of-type(3) { color: #FFF; font-family: 'Sarabun', sans-serif; padding: 0 20px }
+
+	.Expertises .SegundaSessao .Detalhe { position: relative; display: grid; grid-template-columns: 20% 20% 20% 20% 20%; margin-top: 90px }
+	.Expertises .SegundaSessao .Detalhe .Bola { margin: 0; }	
+	.Expertises .SegundaSessao .Detalhe .Bola:before { width: 40%; margin-left: 10.01%; }
+	.Expertises .SegundaSessao .Detalhe .Bola:after { width: 40%; margin-right: 10%; }
+	.Expertises .SegundaSessao .Detalhe .bola-wrapper:first-of-type .Bola { margin-left: 50%; }
+	.Expertises .SegundaSessao .Detalhe .bola-wrapper:last-of-type .Bola { float: right; margin-right: 50%; }	
+	.Expertises .SegundaSessao .Detalhe .bola-wrapper .RiscoBola { content: ''; height: 34px; width: 1px; background-color: var(--principal); display: block; margin: auto; margin-top: -34px;  }
+	.Expertises .SegundaSessao .Detalhe .bola-wrapper:first-of-type .RiscoBola { margin-left: calc(50% + 2px); }
+	.Expertises .SegundaSessao .Detalhe .bola-wrapper:last-of-type .RiscoBola { margin-right: calc(50% + 2px); }
+	
+	.Expertises .SegundaSessao .Processo img { margin: auto; margin-top: 20px; margin-bottom: 10px }
+	.Expertises .SegundaSessao .Processo p:first-of-type { color: #FFF; letter-spacing: initial; margin-bottom: 20px; text-transform: initial; font-size: 1.4rem; }
+	.Expertises .SegundaSessao .Processo p:last-of-type { color: #FFF; text-transform: initial;  }
+
+	.Expertises .TerceiraSessao { background-color: var(--principal); color: #FFF; padding-top: 120px; padding-bottom: 110px; }
+	.Expertises .TerceiraSessao::before { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; top: 0; display: block; }
+	.Expertises .TerceiraSessao p.Destaque { font-size: 1.8rem; letter-spacing: 0.4rem; color: var(--secundaria); font-family: 'OC Rey'; }
+
+	.Expertises .TerceiraSessao .Boxes { margin: 95px 0 70px 0; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; row-gap: 51px; justify-items: center; }
+	.Expertises .TerceiraSessao .Box { width: 198px; height: 243px; border: 1px solid #FFF; position: relative; margin: auto; padding-left: 27px; padding-top: 33px; padding-right: 12px; box-sizing: border-box; }
+	.Expertises .TerceiraSessao .Box p strong { font-size: 0.93rem; line-height: 1.5rem; display: block; margin-bottom: 5px }
+	.Expertises .TerceiraSessao .Box p { font-family: 'OC Rey'; font-size: 0.87rem; line-height: 1.12rem; text-align: left; z-index: 2; position: relative; display: block; }
+	.Expertises .TerceiraSessao .Box p:last-of-type { color: #C1997D; font-family: 'OC Rey'; font-size: 9.3rem; font-weight: bold; position: absolute; left: 0; top: 50%; margin: 0; z-index: 0; }
+
+	.Expertises .TerceiraSessao .Praticas { position: relative; padding-top: 75px }
+	.Expertises .TerceiraSessao .Praticas::before { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; top: 0; display: block; }
+	.Expertises .TerceiraSessao .Praticas .Wrapper { display: grid; grid-template-columns: 1fr auto 1fr; margin-top: 100px; align-items: center; }
+	.Expertises .TerceiraSessao .Praticas .esq, .Expertises .TerceiraSessao .Praticas .dir { max-width: 452px; text-align: center; margin: auto; }
+	.Expertises .TerceiraSessao .Praticas .Wrapper h2 { color: var(--secundaria); font-weight: bold; font-size: 1.5rem; margin-bottom: 28px }
+
+	.Expertises .QuartaSessao { background: url('../images/bg-sobre-nos.jpg'); min-height: 301px; background-size: cover; display: grid; grid-template-columns: 1fr 1fr; align-items: center; justify-items: center; }
+	.Expertises .QuartaSessao a { text-transform: uppercase; letter-spacing: 0.4rem; font-size: 1.8rem; color: #FFF; font-family: 'OC Rey'; float: right; }
+	.Expertises .QuartaSessao .DesktopItem { background-image: url('../images/Grafismo09.svg'); width: 100%; height: 124px; background-position-x: -306px; background-repeat: no-repeat; }
 /* :Expertises */
 
 /* -------------------------------- Versionamento Desktop: -------------------------------- */
@@ -268,7 +316,6 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* :Footer Desktop */
 
 /* Página Home Desktop: */
-
 	.Navegador {left: -10px;}
 
 	.Home {}
@@ -291,8 +338,6 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 	#FinalProximaPagina p {padding: 26px 0; width: 510px;}
 
 	.Home #FinalProximaPagina {background: url('../images/Grafismo03.svg') no-repeat right; background-size: 500px;}
-	
-
 /* :Página Home Desktop */
 
 }
@@ -399,6 +444,37 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 		.Home #FinalProximaPagina {background: url('../images/Grafismo03.svg') no-repeat right; background-size: 500px;}
 
 /* :Página Home Tablet */
+
+/* Expertises Tablet: */
+	.Expertises h1 { padding: 0 50px; font-size: 2.8rem; line-height: 3.12rem; margin-top: 30% }
+	.Expertises .PrimeiraSessao p:first-of-type { padding: 0 70px; font-size: 1.5rem; line-height: 2.5rem; }
+	.Expertises .PrimeiraSessao p { padding: 0 40px; font-size: 1.12rem; }
+	.Expertises .PrimeiraSessao img { display: none; }
+	.Expertises .PrimeiraSessao::after { bottom: 60px }
+
+	.Expertises .TerceiraSessao { padding-top: 53px; padding-bottom: 42px }
+
+	.Expertises .SegundaSessao p:first-of-type { font-size: 1.2rem; line-height: 2.5rem; }
+	.Expertises .SegundaSessao h2 { font-size: 1.5rem; line-height: 1.8rem; margin-bottom: 5px }
+	.Expertises .SegundaSessao .Risco { height: 34px; margin: 40px auto }
+
+	.Expertises .SegundaSessao .Slider div div:nth-of-type(3) { font-size: 0.8rem; line-height: 1.12rem; padding: 0 8px; }
+
+	.Expertises .TerceiraSessao .Boxes { margin-top: 52px }
+
+	.Expertises .TerceiraSessao p.Destaque { font-size: 1.12rem; letter-spacing: 0.3rem; }	
+	.Expertises .TerceiraSessao .Box { width: 140px; height: 180px; padding-top: 16px; padding-left: 12px; padding-right: 15px ; }
+	.Expertises .TerceiraSessao .Box p { font-size: 0.6rem; line-height: 1rem; }
+	.Expertises .TerceiraSessao .Box p strong { font-size: 0.75rem; line-height: 1.12rem; }
+	.Expertises .TerceiraSessao .Box p:last-of-type { font-size: 6.8rem; }
+
+	.Expertises .TerceiraSessao .Praticas .esq, .Expertises .TerceiraSessao .Praticas .dir { max-width: 253px; }
+	.Expertises .TerceiraSessao .Praticas .Wrapper p { font-size: 0.87rem; line-height: 1.25rem;}
+
+	.Expertises .QuartaSessao .MobileItem { background-image: url('../images/Grafismo10.svg'); width: 100%; height: 55px; background-position-x: left; background-repeat: no-repeat; }
+
+/* :Expertises Tablet */
+
 }
 
 /* -------------------------------- :Versionamento Tablet --------------------------------- */
