--- a/assets/css/estrutura.css
+++ b/assets/css/estrutura.css
@@ -217,13 +217,13 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* :Página Home */
 
 /* Expertises: */
-	.Expertises h1 { position: initial; margin-top: 18%; margin-bottom: 80px; padding: 0 150px }
+	.Expertises h1 { position: absolute; margin:0; top: 30% }
 	.Expertises p { text-align: center; }
-	.Expertises .PrimeiraSessao::after { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; bottom: 0 }
+	.Expertises .PrimeiraSessao::after { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; bottom: 0; z-index: 1; }
 	
-	.Expertises .PrimeiraSessao div { height: 100%; padding: 50px; box-sizing: border-box; }
-	.Expertises .PrimeiraSessao p { font-size: 1.3rem; line-height: 1.75rem; padding: 0 115px; }
-	.Expertises .PrimeiraSessao p:first-of-type { font-size: 1.5rem; margin-bottom: 20px; font-family: 'OC Rey' }
+	.Expertises .PrimeiraSessao article { height: 100%; box-sizing: border-box;  }
+	.Expertises .PrimeiraSessao p { font-size: 1.3rem; line-height: 1.75rem; padding: 0 75px; position: relative; top:50% }
+	.Expertises .PrimeiraSessao p:first-of-type { font-size: 1.5rem; margin-bottom: 20px; font-family: 'OC Rey'; margin-top: 115px }
 	.Expertises .PrimeiraSessao img { width: 16px; -ms-transform: rotate(-90deg); -webkit-transform: rotate(-90deg); transform: rotate(-90deg); bottom: 82px; left: 50%; margin-left: -8px; position: absolute; }
 
 	.Expertises .SegundaSessao { background-color: var(--secundaria); padding-top: 80px; padding-bottom: 90px; }
@@ -236,7 +236,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 	.Expertises .SegundaSessao .Slider { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; text-align: center; }
 	.Expertises .SegundaSessao .Slider div { }
-	.Expertises .SegundaSessao .Slider div div:first-of-type { font-size: 1.8rem; }
+	.Expertises .SegundaSessao .Slider .wrapper div:first-of-type { font-size: 1.8rem; }
 	.Expertises .SegundaSessao .Slider div div:nth-of-type(2) { margin-top: 50px; margin-bottom: 40px; position: relative; }
 
 	.Expertises .SegundaSessao .Bola { content: ''; width: 6px; height: 6px; background-color: var(--principal); display: block; border-radius: 50%; margin: auto; }
@@ -246,7 +246,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 	.Expertises .SegundaSessao .wrapper:first-child .Bola:before { display: none; }
 	.Expertises .SegundaSessao .wrapper:last-child .Bola:after { display: none; }
 
-	.Expertises .SegundaSessao .Slider div div:nth-of-type(3) { color: #FFF; font-family: 'Sarabun', sans-serif; padding: 0 20px }
+	.Expertises .SegundaSessao .Slider .wrapper div:nth-of-type(3) { color: #FFF; font-family: 'Sarabun', sans-serif; padding: 0 20px }
 
 	.Expertises .SegundaSessao .Detalhe { position: relative; display: grid; grid-template-columns: 20% 20% 20% 20% 20%; margin-top: 90px }
 	.Expertises .SegundaSessao .Detalhe .Bola { margin: 0; }	
@@ -270,7 +270,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 	.Expertises .TerceiraSessao .Box { width: 198px; height: 243px; border: 1px solid #FFF; position: relative; margin: auto; padding-left: 27px; padding-top: 33px; padding-right: 12px; box-sizing: border-box; }
 	.Expertises .TerceiraSessao .Box p strong { font-size: 0.93rem; line-height: 1.5rem; display: block; margin-bottom: 5px }
 	.Expertises .TerceiraSessao .Box p { font-family: 'OC Rey'; font-size: 0.87rem; line-height: 1.12rem; text-align: left; z-index: 2; position: relative; display: block; }
-	.Expertises .TerceiraSessao .Box p:last-of-type { color: #C1997D; font-family: 'OC Rey'; font-size: 9.3rem; font-weight: bold; position: absolute; left: 0; top: 50%; margin: 0; z-index: 0; }
+	.Expertises .TerceiraSessao .Box p:last-of-type { color: #C1997D; font-family: 'OC Rey'; font-size: 9.3rem; font-weight: bold; position: absolute; left: 0; bottom:60px; margin: 0; z-index: 0; }
 
 	.Expertises .TerceiraSessao .Praticas { position: relative; padding-top: 75px }
 	.Expertises .TerceiraSessao .Praticas::before { content: ''; width: 1px; height: 34px; background: #FFF; position: absolute; left: 50%; margin-left: -0.5px; top: 0; display: block; }
@@ -379,6 +379,11 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 		#LogoMenu {margin-top: 30px;}
 
 		#SegundoScroll .ConteudoHome h3 {border-bottom-width: 1px;}
+
+
+		.Expertises .PrimeiraSessao img { display: none; }
+
+
 }
 
 /* -------------------------------- :Versionamento Tablet & Mobie --------------------------------- */
@@ -446,11 +451,14 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* :Página Home Tablet */
 
 /* Expertises Tablet: */
-	.Expertises h1 { padding: 0 50px; font-size: 2.8rem; line-height: 3.12rem; margin-top: 30% }
-	.Expertises .PrimeiraSessao p:first-of-type { padding: 0 70px; font-size: 1.5rem; line-height: 2.5rem; }
-	.Expertises .PrimeiraSessao p { padding: 0 40px; font-size: 1.12rem; }
-	.Expertises .PrimeiraSessao img { display: none; }
-	.Expertises .PrimeiraSessao::after { bottom: 60px }
+	.Expertises .PrimeiraSessao article { max-width: 585px; }
+
+	.Expertises h1 { padding: 0; font-size: 2.8rem; line-height: 3.12rem; margin-top: 10% }	
+	
+	.Expertises .PrimeiraSessao p:first-of-type { padding: 0; font-size: 1.5rem; line-height: 2.5rem; }
+	.Expertises .PrimeiraSessao p { padding: 0; font-size: 1.12rem; }
+	
+	.Expertises .PrimeiraSessao::after { bottom: 60px; bottom: -17px }
 
 	.Expertises .TerceiraSessao { padding-top: 53px; padding-bottom: 42px }
 
@@ -460,13 +468,14 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 	.Expertises .SegundaSessao .Slider div div:nth-of-type(3) { font-size: 0.8rem; line-height: 1.12rem; padding: 0 8px; }
 
-	.Expertises .TerceiraSessao .Boxes { margin-top: 52px }
+	.Expertises .TerceiraSessao article { max-width: 670px; }
+	.Expertises .TerceiraSessao .Boxes { margin-top: 52px; row-gap: 28px; }
 
 	.Expertises .TerceiraSessao p.Destaque { font-size: 1.12rem; letter-spacing: 0.3rem; }	
 	.Expertises .TerceiraSessao .Box { width: 140px; height: 180px; padding-top: 16px; padding-left: 12px; padding-right: 15px ; }
 	.Expertises .TerceiraSessao .Box p { font-size: 0.6rem; line-height: 1rem; }
 	.Expertises .TerceiraSessao .Box p strong { font-size: 0.75rem; line-height: 1.12rem; }
-	.Expertises .TerceiraSessao .Box p:last-of-type { font-size: 6.8rem; }
+	.Expertises .TerceiraSessao .Box p:last-of-type { font-size: 6.8rem; bottom: 40px; }
 
 	.Expertises .TerceiraSessao .Praticas .esq, .Expertises .TerceiraSessao .Praticas .dir { max-width: 253px; }
 	.Expertises .TerceiraSessao .Praticas .Wrapper p { font-size: 0.87rem; line-height: 1.25rem;}
@@ -540,6 +549,55 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 		#FinalProximaPagina .Detalhe {display: block;}
 
 /* :Página Home Mobile */
+
+/* Expertise Mobile: */
+	.Expertises .PrimeiraSessao div { padding: 30px; }
+	.Expertises .PrimeiraSessao::after { bottom: -17px }
+	.Expertises h1 { padding: 0 20px; top: 30%; }
+	.Expertises .PrimeiraSessao p { font-size: 1rem; line-height: 1.3rem; padding: 0; top: 70% }
+
+	.Expertises .SegundaSessao h2 { font-size: 1.8rem; line-height: 2.5rem; padding: 0 45px }
+	.Expertises .SegundaSessao p:first-of-type { font-size: 1.12rem; line-height: 1.8rem; padding: 0 70px; }
+	.Expertises .SegundaSessao .Risco { height: 44px; margin-top: 30px; margin-bottom: 22px }
+
+	.Expertises .SegundaSessao .SliderWrapper p:first-of-type { letter-spacing: 0.2rem; padding: 0 70px }
+
+	.Expertises .SegundaSessao .Processo { margin-top: 60px; }
+	.Expertises .SegundaSessao .Processo img { position: absolute; left: 50%; margin-left: -21px; margin-top: -120px; }
+
+	.Expertises .SegundaSessao .SliderWrapper p:first-of-type { font-size: 1.15rem; line-height: 1.5rem; letter-spacing: initial; margin-bottom: 45px }
+	.Expertises .SegundaSessao .Processo p:last-of-type { font-size: 1rem ; line-height: 1.5rem; padding: 0 50px }
+
+	.Expertises .SegundaSessao .Slider { grid-template-columns: 100%; }
+	
+	.Expertises .SegundaSessao .Slider .wrapper div:first-of-type { line-height: 2.5rem; }
+	.Expertises .SegundaSessao .Slider .wrapper:nth-of-type(2) { margin: 0 }
+	.Expertises .SegundaSessao .Slider .wrapper div:nth-of-type(3) { padding: 0; margin-top: 45px }
+	.Expertises .slick-track div:last-child { font-family: 'Sarabun', sans-serif; font-size: 1rem }
+
+	.Expertises .slick-arrow { bottom: 30px; top: initial; z-index: 2; top: 75% }
+	.Expertises .slick-next { right: 30px; margin-top: -10px }
+	.Expertises .slick-next:before { content: url('../images/SetaSecundaria.svg') }
+	.Expertises .slick-prev { left: 30px; }
+	.Expertises .slick-prev:before { content: url('../images/SetaSecundaria.svg') }
+	.Expertises .slick-prev.slick-disabled, .slick-next.slick-disabled { display: none!important; }
+	.Expertises .SegundaSessao .Detalhe { margin-top: 110px }
+
+	.Expertises .TerceiraSessao { padding-top: 75px }
+	.Expertises .TerceiraSessao article { padding-top: 65px }
+	.Expertises .TerceiraSessao p.Destaque { font-size: 1.25rem; line-height: 1.8rem; padding: 0 40px }
+	.Expertises .TerceiraSessao .Boxes { margin-top: 5px }
+
+	.Expertises .TerceiraSessao .Praticas .Wrapper { grid-template-columns: initial; grid-template-rows: 1fr auto 1fr; margin-top: 35px; padding: 0 55px }
+	.Expertises .TerceiraSessao .Praticas .Wrapper img { -ms-transform: rotate(90deg); -webkit-transform: rotate(90deg); transform: rotate(90deg); margin: auto; }
+
+
+	.Expertises .TerceiraSessao .Boxes { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; margin: 0 }
+	
+	.Expertises .TerceiraSessao .Praticas { padding-top: 60px }
+	.Expertises .TerceiraSessao .Praticas::before { display: none; }
+
+/* :Expertise Mobile */
 }
 
 @media screen and (max-width: 330px) { /* correções para o Iphone 5/SE */
