--- a/assets/css/estrutura.css
+++ b/assets/css/estrutura.css
@@ -11,6 +11,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 html {background: var(--secundaria) url('../images/loading.svg') no-repeat center; width: 100%; height: 100%; min-height: 100%; overflow-x: hidden;}
 body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box; color: #FFF; background: var(--secundaria); font-size: 16px; font-weight: 400; line-height: 1.3rem; height: 100%; min-height: 100% !important;}
 
+
 /* Font */
 	@font-face {
 		font-family: 'OC Rey';
@@ -251,7 +252,9 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 	#SegundoScroll {padding: 100px 0;}
 
-	#SegundoScroll .ConteudoHome h3 {border-bottom: 2px solid var(--principal); padding-bottom: 20px; margin-bottom: 30px;}
+	#SegundoScroll .ConteudoHome h3 { padding-bottom: 20px; margin-bottom: 30px;}
+
+	#SegundoScroll article::before { content: ''; width: 47%; height: 2px; background: var(--principal); display: block; position: absolute; top: 190px; }
 
 	#SegundoScroll .ConteudoHome p {color: var(--principal);}
 	#SegundoScroll .ConteudoHome ul {margin-top: 20px;}
@@ -450,15 +453,9 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* :Elementos Desktop */
 
 /* Header Desktop: */
-	/* header {}
-		header article {padding: 30px 0;}
-		header nav {text-align: right; padding: 5px;}
-			header nav a {padding: 10px 30px; display: inline-block;}
-			header .SessaoAtual div { border-bottom: 1px solid; padding-bottom: 6px; }
-
-		#Logo {width: 220px;} */
-/* :Header Desktop */
-
+	#Logo {width: 220px;}
+/* Header Desktop: */
+			
 /* Footer Desktop: */
 	footer {}
 		footer article {padding: 30px;}
@@ -483,7 +480,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 	#TerceiroScroll h2 {padding-bottom: 30px; margin-bottom: 40px; border-bottom: 2px solid var(--principal);}
 	#TerceiroScroll .Navegador {margin-top: -108px;}
 
-	#TerceiroScroll::after {width: 500px; top: 350px;}
+	#TerceiroScroll::after {width: 30%; top: 350px;}
 	
 	#FinalProximaPagina {padding: 30px 0;}
 	#FinalProximaPagina h3 {letter-spacing: 9px; font-size: 1.8rem;}
@@ -500,7 +497,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* -------------------------------- Versionamento Desktop: -------------------------------- */
 
 @media screen and (min-width: 1600px) {
-	#TerceiroScroll::after {width: 540px;}
+	#TerceiroScroll::after {width: 40%;}
 }
 
 /* -------------------------------- Versionamento Tablet & Mobie: --------------------------------- */
@@ -537,7 +534,7 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 		#LogoMenu {margin-top: 30px;}
 
-		#SegundoScroll .ConteudoHome h3 {border-bottom-width: 1px;}
+		/* #SegundoScroll .ConteudoHome h3 {border-bottom-width: 1px;} */
 		.Expertises .PrimeiraSessao img { display: none; }
 
 		.PopupWrapper { grid-template-rows: auto auto; grid-template-columns: initial; }
@@ -547,25 +544,6 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 }
 
 /* -------------------------------- :Versionamento Tablet & Mobie --------------------------------- */
-
-
-
-
-
-
-
-
-		
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -602,11 +580,13 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 		#TerceiroScroll {padding-bottom: 60px;}
 
+		#SegundoScroll article::before { content: ''; width: 65%; height: 1px; background: var(--principal); display: block; position: absolute; top: 157px; }
+
 		#TerceiroScroll .Detalhe {width: 320px; margin-left: -370px; margin-top: 49px;}
 		#TerceiroScroll h2 {padding-bottom: 30px; margin-bottom: 40px; border-bottom: 1px solid var(--principal);}
 		#TerceiroScroll .Navegador {margin-top: -120px; margin-right: -30px;}
 
-		#TerceiroScroll::after {width: 200px; top: 232px; height: 1px;}
+		#TerceiroScroll::after {width: 20%; top: 232px; height: 1px;}
 
 		#FinalProximaPagina {padding: 30px 0;}
 		#FinalProximaPagina h3 {letter-spacing: 4.2px; font-size: 1.3rem;}
@@ -735,8 +715,8 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 /* Header Mobile: */
 	header {}
 
-		header article {padding: 20px;}
-	
+		header article {padding: 20px; margin: 0}
+
 		#Logo {width: 120px;}
 
 		#AbrirMenu {top: 30px; right: 20px;}
@@ -758,13 +738,15 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 
 		#SliderHome {font-size: 1.1rem; line-height: 1.4rem; margin-left: -100px; width: 200px;}
 
-		#SegundoScroll .Detalhe {width: 370px; margin-top: 100px; margin-left: 20px;}
-		#SegundoScroll::before {content: ''; width: 310px; height: 1px; background: var(--principal); display: block; position: absolute; top: 230px; left: -77px;}
+		#SegundoScroll .Detalhe {width: 370px; margin-top: 174px; margin-left: 20px;}
+		#SegundoScroll::before {content: ''; width: 310px; height: 1px; background: var(--principal); display: block; position: absolute; top: 304px; right: 43%}
 
-		#SegundoScroll .ConteudoHome ul {padding-left: 30px;}
-		#SegundoScroll .ConteudoHome h2 {width: 180px;}
-		#SegundoScroll .ConteudoHome h3 {width: 180px; border-bottom: none; padding-bottom: 0; margin-bottom: 0; margin-top: 50px;}
-		#SegundoScroll .ConteudoHome p {margin-top: 50px;}
+		#SegundoScroll article::before { display: none }
+
+		#SegundoScroll .ConteudoHome ul {padding-left: 0; margin-top: 30px }
+		#SegundoScroll .ConteudoHome h2 {width: 255px;}
+		#SegundoScroll .ConteudoHome h3 {width: 255px; border-bottom: none; padding-bottom: 0; margin-bottom: 0; margin-top: 10px; }
+		#SegundoScroll .ConteudoHome p {margin-top: 50px; max-width: 171px; }
 
 		#TerceiroScroll {padding-bottom: 50px;}
 
@@ -898,6 +880,6 @@ body {display: none; font-family: 'Sarabun', sans-serif; box-sizing: border-box;
 }
 
 @media screen and (max-width: 330px) { /* correções para o Iphone 5/SE */
-	#SegundoScroll:before {left: -107px;}
+	/* #SegundoScroll:before {left: -107px;} */
 }
 /* -------------------------------- :Versionamento Mobile --------------------------------- */	
